<resources>
    <string name="app_name" translatable="false">PatheDeApp</string>
    <string name="enter_as_guest_button">Enter as guest</string>
    <string name="button_register">Register</string>
    <string name="button_login">Login</string>
    <string name="hint_password">Password</string>
    <string name="hint_username">Username</string>
    <string name="intro_text">Hello There, Welcome Back</string>
    <string name="sign_in_text">Sign In to continue</string>
    <string name="hint_vote_count">vote count</string>
    <string name="hint_year">release year</string>
    <string name="hint_vote_average">vote average</string>
    <string name="hint_original_language">original language</string>
    <string name="list_description" translatable="false">List description</string>
    <string name="list_title">List</string>
    <string name="lists_title">Lists</string>
    <string name="list_create">Create List</string>
    <string name="list_make_button">Make List</string>
    <string name="button_new_list">Make New List</string>
    <string name="button_add_to_list">Add Movie</string>
    <string name="list_name">List name</string>
    <string name="rating">rating:</string>
    <string name="genre">genre:</string>
    <string name="runtime">runtime:</string>
    <string name="confirm_rating_button">Confirm rating</string>
    <string name="invalid_input_error">Invalid input</string>
    <string name="general_error">Error</string>
    <string name="incorrect_login">Incorrect username and/or password</string>
    <string name="genre_filter">genre</string>
    <string name="not_logged_in">you must be logged in to acces this page</string>
    <string name="number_smaller_than">Number must be smaller than 11</string>
    <string name="language_contains_numbers">Language cannot contain numbers</string>
    <string name="genre_contains_numbers">Genre cannot contain numbers</string>
    <string name="logged_in">Successfully logged in</string>
    <string name="logged_in_guest">Successfully logged in as guest</string>
    <string name="could_not_find_movies">Could not find any movies</string>
    <string name="no_trailers">Movie does not have any trailers</string>
    <string name="clear_filters">clear filters</string>
    <string name="done">confirm</string>
    <string name="year">year</string>
    <string name="add_filter">add filter</string>
    <string name="cancel">cancel</string>
    <string name="film">film</string>
    <string name="watch_trailer">Watch trailer</string>
    <string name="description">description</string>
    <string name="reviews">Reviews:</string>
    <string name="insert_movie">insert movie</string>
    <string name="score" translatable="false">78%</string>
    <string name="info"><![CDATA[info >]]></string>
    <string name="date" translatable="false">23 augustus 2021</string>
    <string name="lists">Lists</string>
    <string name="log_out">Log out</string>
    <string name="switch_to_darkmode">Switch to darkmode</string>
    <string-array name="spinner_sort">
        <item>popularity</item>
        <item>release date</item>
        <item>revenue</item>
        <item>primary release date</item>
        <item>original title</item>
        <item>vote average</item>
        <item>vote count</item>
    </string-array>

    <string-array name="spinner_mode">
        <item>descending</item>
        <item>ascending</item>
    </string-array>

    <string-array name="filters">
        <item>clear all filters</item>
        <item>vote count</item>
        <item>release year</item>
        <item>vote average</item>
        <item>with people</item>
    </string-array>
</resources>